--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 				<section id="RoverHouse"
 					class="content-banner-wrap content-banner-box-shadow content-banner-wrap-theme animate">
 					<div class="container">
-						<div class="row vh-70 row-eq-height flex-xs-column-reverse">
+						<div class="row row-eq-height flex-xs-column-reverse">
 							<div class="col-md-6 align-self-center text-center text-white wow fadeInUp mt-md-0 mt-5">
 								<h1 class="wow fadeInUp"><span>RoverHouse</span></h1>
 								<h2 class="wow fadeInUp text-white">Maximize Yield</h2>
@@ -391,7 +391,7 @@
 				<section id="RoverGib"
 					class="content-banner-wrap content-banner-box-shadow content-banner-wrap-theme animate">
 					<div class="container">
-						<div class="row vh-70 row-eq-height">
+						<div class="row  row-eq-height">
 							<div class="col-md-6 align-self-center text-center">
 								<img src="images/Grogu.png" alt="" class=" wow fadeInLeft" />
 							</div>
@@ -414,7 +414,7 @@
 				<section id="RoverDao"
 					class="content-banner-wrap content-banner-box-shadow content-banner-wrap-theme animate">
 					<div class="container">
-						<div class="row vh-70 row-eq-height flex-xs-column-reverse">
+						<div class="row  row-eq-height flex-xs-column-reverse">
 							<div class="col-md-6 align-self-center text-center text-white wow fadeInUp mt-md-0 mt-5">
 								<h1 class="wow fadeInUp"><span>RoverDao</span></h1>
 								<h2 class="wow fadeInUp">Governance</h2>
@@ -436,7 +436,7 @@
 				<section id="RoverOne"
 					class="content-banner-wrap content-banner-box-shadow content-banner-wrap-theme animate">
 					<div class="container">
-						<div class="row vh-70 row-eq-height">
+						<div class="row  row-eq-height">
 							<div class="col-md-6 align-self-center text-center">
 								<img src="images/RoverOne.jpg" alt="" class=" wow fadeInLeft" />
 							</div>
@@ -457,7 +457,7 @@
 				</section>
 				<section id="NFT" class="content-banner-wrap content-banner-box-shadow animate  animate">
 					<div class="container">
-						<div class="row vh-70 row-eq-height flex-xs-column-reverse">
+						<div class="row row-eq-height flex-xs-column-reverse">
 							<div class="col-md-6 align-self-center text-center text-white wow fadeInUp mt-md-0 mt-5">
 								<h1 class="wow fadeInUp"><span>NFT</span></h1>
 								<h2 class="wow fadeInUp">Bridge Defi to NFT</h2>
