--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 											<div class="banner-header text-center ">
 												<div class="banner-header-title">
 													<div class="banner-main-top">
-														<h1 class="text-white font-lg wow fadeInUp">All DeFi & <br>NFT
+														<h1 class="text-white font-lg wow fadeInUp" >All DeFi & <br>NFT
 															Earnings</h1>
 														<h2 class="text-white font-lg2 wow fadeInUp"
 															style="padding-left: 50px;">Uni<span>fied</span> in One
@@ -203,6 +203,49 @@
 					</div>
 				</div>
 			</div>
+
+			<div id="innovation-stack">
+				<div class="container">
+					<div class="row">
+						<div class="col-12">
+							<div class="section-subtitle wow fadeInUp text-center">Innovation Stack</div>
+							<div class="wow fadeInLeft">
+								<h2 class="text-center text-white">Built with the Best in Industry</h2>
+							</div>
+							<div class="wow fadeInRight">	
+							 <p class="text-center text-white">	Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni accusantium porro voluptatibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni accusantium porro voluptatibus!</p> 
+							</div>
+						</div>
+						<div class="col-12">
+							<div class="stack_partners">
+								<div class="partner_image wow fadeInLeft " >
+									<img src="images/logo_Nerd.svg" alt="logo_Nerd.svg">
+								</div>
+
+								<div class="partner_image wow fadeInLeft ">
+									<img src="images/logo_TWA.svg" alt="logo_TWA.svg">
+								</div>
+
+								<div class="partner_image wow fadeInLeft ">
+									<img src="images/logo_Sushi.svg" alt="logo_Sushi.svg">
+								</div>
+
+								<div class="partner_image wow fadeInLeft ">
+									<img src="images/logo_Coin.svg" alt="logo_Coin.svg">
+								</div>
+
+								<div class="partner_image wow fadeInLeft ">
+									<img src="images/logo_Uni.svg" alt="logo_Uni.svg">
+								</div>
+
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+
+
 			<div class="dog-section">
 				<div class="dog-section-single">
 					<div class="row ">
@@ -228,8 +271,8 @@
 											terra-farming pools.</li>
 										<li>Terra-farming starts at block #11.021.639 with 1 $TRDL per block.</li>
 									</ul>
-									<a class="button wow fadeInUp" target="_blank" href=" " title="$TRDL ETF">vBTC/ETH
-										LP</a>
+									<a class="button wow fadeInUp" target="_blank" href=" " title="$TRDL ETF">Fetch!
+									</a>
 								</div>
 							</div>
 						</div>
@@ -260,8 +303,8 @@
 											terra-farming pools.</li>
 										<li>Terra-farming starts at block #11.021.639 with 1 $TRDL per block.</li>
 									</ul>
-									<a class="wow fadeInUp button" target="_blank" href=" " title="$TRDL ETF">vBTC/ETH
-										LP</a>
+									<a class="wow fadeInUp button" target="_blank" href=" " title="$TRDL ETF">Fetch!
+									</a>
 								</div>
 							</div>
 						</div>
@@ -293,8 +336,8 @@
 											terra-farming pools.</li>
 										<li>Terra-farming starts at block #11.021.639 with 1 $TRDL per block.</li>
 									</ul>
-									<a class="wow fadeInUp button" target="_blank" href=" " title="$TRDL ETF">vBTC/ETH
-										LP</a>
+									<a class="wow fadeInUp button" target="_blank" href=" " title="$TRDL ETF">Fetch!
+									</a>
 								</div>
 							</div>
 						</div>
@@ -328,16 +371,13 @@
 											terra-farming pools.</li>
 										<li>Terra-farming starts at block #11.021.639 with 1 $TRDL per block.</li>
 									</ul>
-									<a class="wow fadeInUp button" target="_blank" href=" " title="$TRDL ETF">vBTC/ETH
-										LP</a>
+									<a class="wow fadeInUp button" target="_blank" href=" " title="$TRDL ETF">Fetch!
+									</a>
 								</div>
 							</div>
 						</div>
 
 					</div>
-
-
-
 				</div>
 				<div class="content-banner-wrap content-banner-box-shadow py-0">
 					<canvas id="bgCanvas2"></canvas>
@@ -398,14 +438,14 @@
 							<div class="col-md-6 align-self-center text-center text-white wow fadeInUp mt-md-0 mt-5">
 								<h1 class="wow fadeInUp"><span>RoverGib</span></h1>
 								<h2 class="wow fadeInUp">Borrow/Lend</h2>
-									<h3 class="wow fadeInUp">Use Rover’s own Aave & Compound</h3>
-									<p>Rover’s Money Market protocol RoverGib expands the playing field to include
-										borrowing and lending on a myriad of DeFi assets. Like Aave, Maker, and
-										Compound, RoverGib creates markets for various assets. Lenders earn interest on
-										otherwise idle crypto assets, while Borrowers can take out collateralized loans
-										or employ flash loans for various positioning and leveraging strategies.
-										RoverGib also becomes the first pillar in a substack of platforms which
-										facilitates complete integration of assets, commodities, NFTs and more.</p>
+								<h3 class="wow fadeInUp">Use Rover’s own Aave & Compound</h3>
+								<p>Rover’s Money Market protocol RoverGib expands the playing field to include
+									borrowing and lending on a myriad of DeFi assets. Like Aave, Maker, and
+									Compound, RoverGib creates markets for various assets. Lenders earn interest on
+									otherwise idle crypto assets, while Borrowers can take out collateralized loans
+									or employ flash loans for various positioning and leveraging strategies.
+									RoverGib also becomes the first pillar in a substack of platforms which
+									facilitates complete integration of assets, commodities, NFTs and more.</p>
 							</div>
 
 						</div>
@@ -418,12 +458,12 @@
 							<div class="col-md-6 align-self-center text-center text-white wow fadeInUp mt-md-0 mt-5">
 								<h1 class="wow fadeInUp"><span>RoverDao</span></h1>
 								<h2 class="wow fadeInUp">Governance</h2>
-									<h3 class="wow fadeInUp">Govern all the things</h3>
-									<p>
-										ROVER is being created to uphold the principles of Defi. Holders of the ROVER
-										token thus become part of the decentralized governing organization RoverDao,
-										which makes decisions on behalf of the protocol.
-									</p>
+								<h3 class="wow fadeInUp">Govern all the things</h3>
+								<p>
+									ROVER is being created to uphold the principles of Defi. Holders of the ROVER
+									token thus become part of the decentralized governing organization RoverDao,
+									which makes decisions on behalf of the protocol.
+								</p>
 							</div>
 
 							<div class="col-md-6 align-self-center text-center">
@@ -461,15 +501,15 @@
 							<div class="col-md-6 align-self-center text-center text-white wow fadeInUp mt-md-0 mt-5">
 								<h1 class="wow fadeInUp"><span>NFT</span></h1>
 								<h2 class="wow fadeInUp">Bridge Defi to NFT</h2>
-									<h3 class="wow fadeInUp">Trade NFT across marketplaces with full Defi benefits</h3>
-									<p>
-										The current explosion of NFTs in the marketplace has created the first real
-										gateway between mainstream everyday people and the heretofore esoteric and
-										somewhat self-enclosed world of decentralized finance. With this comes
-										unprecedented potential for growth in Defi, as capital floods into the space
-										from new outside sources. RoverNFT creates the bridge which allows users to
-										bring their NFTs
-									</p>
+								<h3 class="wow fadeInUp">Trade NFT across marketplaces with full Defi benefits</h3>
+								<p>
+									The current explosion of NFTs in the marketplace has created the first real
+									gateway between mainstream everyday people and the heretofore esoteric and
+									somewhat self-enclosed world of decentralized finance. With this comes
+									unprecedented potential for growth in Defi, as capital floods into the space
+									from new outside sources. RoverNFT creates the bridge which allows users to
+									bring their NFTs
+								</p>
 							</div>
 							<div class="col-md-6 align-self-center text-center">
 								<img src="images/NFT.jpg" alt="" class=" wow fadeInRight" />
@@ -482,7 +522,7 @@
 				<section id="RoverChains"
 					class="content-banner-wrap content-banner-box-shadow content-banner-wrap-theme animate">
 					<div class="container">
-						<div class="row vh-70 row-eq-height">
+						<div class="row row-eq-height">
 							<div class="col-md-6 align-self-center text-center">
 								<img src="images/RoverOne.jpg" alt="" class=" wow fadeInLeft" />
 							</div>
