--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 											<div class="banner-header text-center ">
 												<div class="banner-header-title">
 													<div class="banner-main-top">
-														<h1 class="text-white font-lg wow fadeInUp" >All DeFi & <br>NFT
+														<h1 class="text-white font-lg wow fadeInUp">All DeFi & <br>NFT
 															Earnings</h1>
 														<h2 class="text-white font-lg2 wow fadeInUp"
 															style="padding-left: 50px;">Uni<span>fied</span> in One
@@ -245,9 +245,31 @@
 				</div>
 			</div>
 
+			<div id="Fecth">
+				<div class="container">
+					<div class="row">
+						<div class="col-12">
+							<div class="section-subtitle wow fadeInUp text-center">Fetch!
+							</div>
+							<div class="wow fadeInLeft">
+								<h2 class="text-center text-white">One Click Easy
+								</h2>
+							</div>
+							<div class="wow fadeInRight">	
+							 <p class="text-center text-white">Gib BNB. RoverFetch does the rest
+							</p> 
+							<p class="text-center text-white">Fetches you Rover tokens at the best price by splitting the buy from our own RoverSwap and our LGE, to reduce slippage while automatically pooling, staking, and compounding APY for you
+							</p>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+
 
 			<div class="dog-section">
-				<div class="dog-section-single">
+				<div id="swap" class="dog-section-single">
 					<div class="row ">
 						<div class="col-md-5 my-auto">
 							<div class="dog-section-left">
