--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Rover1 </title>
+	<title>Rover</title>
 	<meta name="title" content="Rover" />
 	<meta name="description" content="Rover" />
 	<meta name="keywords" content="Rover" />
@@ -206,19 +206,30 @@
 
 			<div id="innovation-stack">
 				<div class="container">
-					<div class="row">
-						<div class="col-12">
+					<div class="row justify-content-center">
+						<div class="col-lg-5 col-md-9">
 							<div class="section-subtitle wow fadeInUp text-center">Innovation Stack</div>
+
+							<div class="wow fadeInRight">
+								<p class="text-center text-white">In order to make this possible for users, we faced a
+									major undertaking. We needed a platform that could handle all the many aspects of
+									DeFi under one umbrella. That meant an exchange, money market, yield aggregator, and
+									more. We called this ambitious project our Innovation Stack. Rover combines every
+									facet of Defi & NFTs into a Unified and All-Inclusive ecosystem built to maximize
+									user profit flow with the least friction. Built on the very best financial tools in
+									crypto, Rover’s Innovation Stack is the most ambitious form of “Money Lego”
+									architecture yet in DeFi.</p>
+							</div>
+
+						</div>
+						<div class="col-12">
 							<div class="wow fadeInLeft">
 								<h2 class="text-center text-white">Built with the Best in Industry</h2>
-							</div>
-							<div class="wow fadeInRight">	
-							 <p class="text-center text-white">	Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni accusantium porro voluptatibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni accusantium porro voluptatibus!</p> 
 							</div>
 						</div>
 						<div class="col-12">
 							<div class="stack_partners">
-								<div class="partner_image wow fadeInLeft " >
+								<div class="partner_image wow fadeInLeft ">
 									<img src="images/logo_Nerd.svg" alt="logo_Nerd.svg">
 								</div>
 
@@ -247,19 +258,30 @@
 
 			<div id="Fecth">
 				<div class="container">
-					<div class="row">
-						<div class="col-12">
+					<div class="row justify-content-center">
+						<div class="col-lg-4 col-md-6 col-12">
 							<div class="section-subtitle wow fadeInUp text-center">Fetch!
 							</div>
 							<div class="wow fadeInLeft">
 								<h2 class="text-center text-white">One Click Easy
 								</h2>
 							</div>
-							<div class="wow fadeInRight">	
-							 <p class="text-center text-white">Gib BNB. RoverFetch does the rest
-							</p> 
-							<p class="text-center text-white">Fetches you Rover tokens at the best price by splitting the buy from our own RoverSwap and our LGE, to reduce slippage while automatically pooling, staking, and compounding APY for you
-							</p>
+							<div class="wow fadeInRight">
+								<p class="text-center text-white">Gib BNB. RoverFetch does the rest
+								</p>
+								<p>Fetch</p>
+								<ul class="wow fadeInUp text-white">
+									<li>Buys Rover tokens
+									</li>
+									<li>Pools in dex</li>
+									<li>Stakes</li>
+									<li>Compounds
+									</li>
+								</ul>
+								<p class="text-center text-white">Fetches you Rover tokens at the best price by
+									splitting the buy from our own RoverSwap and our LGE, to reduce slippage while
+									automatically pooling, staking, and compounding APY for you
+								</p>
 							</div>
 						</div>
 					</div>
@@ -270,8 +292,8 @@
 
 			<div class="dog-section">
 				<div id="swap" class="dog-section-single">
-					<div class="row ">
-						<div class="col-md-5 my-auto">
+					<div class="row justify-content-center">
+						<div class="col-md-4 my-auto">
 							<div class="dog-section-left">
 								<div class="dog-section-image wow fadeInLeft">
 									<img src="images/Swap.png" />
@@ -282,27 +304,34 @@
 							<div class="dog-section-right">
 								<div class="dog-section-content">
 									<div class="section-subtitle wow fadeInUp">Swap</div>
-									<div class="section-title wow fadeInUp">Fetch Rover at the best price</div>
-									<p class="wow fadeInUp">$TRDL is the governance and reward token for the Strudel
-										Protocol.
-										It is created on 2 separate occasions:</p>
-									<ul class="wow fadeInUp">
-										<li>When a user crosses BTC over the bridge, $TRDLs are minted alongside vBTC.
-										</li>
-										<li>$TRDL rewards are distributed per block to liquidity providers of various
-											terra-farming pools.</li>
-										<li>Terra-farming starts at block #11.021.639 with 1 $TRDL per block.</li>
-									</ul>
-									<a class="button wow fadeInUp" target="_blank" href=" " title="$TRDL ETF">Fetch!
-									</a>
+									<div class="section-title wow fadeInUp">Fetch Rover at the Best Price</div>
+									<p class="wow fadeInUp">Buys from our own RoverSwap, built on top Uniswap & Pancake,
+										with our additional Defi technology for partnerships and innovation stack
+										integration</p>
+
+									<!-- <a class="button wow fadeInUp" target="_blank" href=" " title="$TRDL ETF">Fetch!
+									</a> -->
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="dog-section-single">
-					<div class="row ">
-						<div class="col-md-5 my-auto">
+					<div class="row justify-content-center">
+						<div class="col-lg-6 col-md-7 my-md-auto mt-5">
+							<div class="dog-section-right">
+								<div class="dog-section-content ">
+									<div class="section-subtitle wow fadeInUp">Pool</div>
+									<div class="section-title wow fadeInUp">Fetch LP for Rover/BNB</div>
+									<p class="wow fadeInUp">Fetch the Liquidity Provider (LP) tokens from our Rover/BNB
+										pool</p>
+
+									<!-- <a class="wow fadeInUp button" target="_blank" href=" " title="$TRDL ETF">Fetch!
+									</a> -->
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 my-auto">
 							<div class="dog-section-left">
 								<div class="dog-section-image wow fadeInRight">
 									<img src="images/pool.png" />
@@ -310,32 +339,13 @@
 							</div>
 						</div>
 
-						<div class="col-lg-6 col-md-7 my-md-auto mt-5">
-							<div class="dog-section-right">
-								<div class="dog-section-content ">
-									<div class="section-subtitle wow fadeInUp">Pool</div>
-									<div class="section-title wow fadeInUp">Fetch LP for Rover/BNB</div>
-									<p class="wow fadeInUp">$TRDL is the governance and reward token for the Strudel
-										Protocol.
-										It is created on 2 separate occasions:</p>
-									<ul class="wow fadeInUp">
-										<li>When a user crosses BTC over the bridge, $TRDLs are minted alongside vBTC.
-										</li>
-										<li>$TRDL rewards are distributed per block to liquidity providers of various
-											terra-farming pools.</li>
-										<li>Terra-farming starts at block #11.021.639 with 1 $TRDL per block.</li>
-									</ul>
-									<a class="wow fadeInUp button" target="_blank" href=" " title="$TRDL ETF">Fetch!
-									</a>
-								</div>
-							</div>
-						</div>
+
 
 					</div>
 				</div>
 				<div class="dog-section-single">
-					<div class="row">
-						<div class="col-md-5 my-auto">
+					<div class="row justify-content-center">
+						<div class="col-md-4 my-auto">
 							<div class="dog-section-left">
 								<div class="dog-section-image wow fadeInLeft">
 									<img src="images/Stake.png" />
@@ -348,18 +358,11 @@
 								<div class="dog-section-content wow fadeInUp">
 									<div class="wow fadeInUp  section-subtitle">Stake</div>
 									<div class="wow fadeInUp  section-title">Fetch LM Rewards</div>
-									<p class="wow fadeInUp">$TRDL is the governance and reward token for the Strudel
-										Protocol.
-										It is created on 2 separate occasions:</p>
-									<ul class="wow fadeInUp">
-										<li>When a user crosses BTC over the bridge, $TRDLs are minted alongside vBTC.
-										</li>
-										<li>$TRDL rewards are distributed per block to liquidity providers of various
-											terra-farming pools.</li>
-										<li>Terra-farming starts at block #11.021.639 with 1 $TRDL per block.</li>
-									</ul>
-									<a class="wow fadeInUp button" target="_blank" href=" " title="$TRDL ETF">Fetch!
-									</a>
+									<p class="wow fadeInUp">Earn a minimum of 1200% APY guaranteed by statking the LP
+										tokens for you</p>
+
+									<!-- <a class="wow fadeInUp button" target="_blank" href=" " title="$TRDL ETF">Fetch!
+									</a> -->
 								</div>
 							</div>
 						</div>
@@ -369,32 +372,27 @@
 
 				<div class="dog-section-single">
 
-					<div class="row">
-						<div class="col-md-5 my-auto">
-							<div class="dog-section-left ">
-								<div class="dog-section-image wow fadeInRight">
-									<img src="images/Compound.png" />
-								</div>
-							</div>
-						</div>
+					<div class="row justify-content-center">
+
 
 						<div class="col-lg-6 col-md-7 my-md-auto mt-5">
 							<div class="dog-section-right">
 								<div class="dog-section-content wow fadeInUp">
 									<div class="wow fadeInUp section-subtitle">Compound</div>
 									<div class="wow fadeInUp section-title">Fetch APY from APR</div>
-									<p class="wow fadeInUp">$TRDL is the governance and reward token for the Strudel
-										Protocol.
-										It is created on 2 separate occasions:</p>
-									<ul class="wow fadeInUp">
-										<li>When a user crosses BTC over the bridge, $TRDLs are minted alongside vBTC.
-										</li>
-										<li>$TRDL rewards are distributed per block to liquidity providers of various
-											terra-farming pools.</li>
-										<li>Terra-farming starts at block #11.021.639 with 1 $TRDL per block.</li>
-									</ul>
-									<a class="wow fadeInUp button" target="_blank" href=" " title="$TRDL ETF">Fetch!
-									</a>
+									<p class="wow fadeInUp">Ensure optimal APY as Rover stakes your claimable tokens to
+										compounds APR</p>
+
+									<!-- <a class="wow fadeInUp button" target="_blank" href=" " title="$TRDL ETF">Fetch!
+									</a> -->
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-4 my-auto">
+							<div class="dog-section-left ">
+								<div class="dog-section-image wow fadeInRight">
+									<img src="images/Compound.png" />
 								</div>
 							</div>
 						</div>
@@ -409,11 +407,12 @@
 								<img src="images/Johnny.png" alt="" class=" wow fadeInLeft" />
 							</div>
 							<div class="col-md-6 align-self-center text-white wow fadeInUp mt-md-0 mt-5">
-								<h1 class="wow fadeInUp"><span>RoverSwap</span></h1>
-								<h2 class="wow fadeInUp">Welcome, Partners</h2>
+								<h1 class="wow fadeInUp"><span>Partners Program</span></h1>
+								<!-- <h2 class="wow fadeInUp">Welcome, Partners</h2> -->
 								<h3 class="wow fadeInUp">Token rev share</h3>
-								<p class="wow fadeInUp">List your coin on Rover + offer APY, and share in Rover’s
-									earnings</p>
+								<p class="wow fadeInUp">Our very own DEX, RoverSwap integrates the power of Uniswap and
+									Pancake with our innovative Partners Program, incentivizing a flow of long-term
+									liquidity and profit to contributing partners and users.</p>
 
 								<h3 class="wow fadeInUp">Platform rev share</h3>
 								<p class="wow fadeInUp">Buy & stake x% of Rover to redirect x% of Rover’s platform
@@ -424,7 +423,7 @@
 									have its own LD. Rover helps with operations</p>
 
 								<h3 class="wow fadeInUp">White-label</h3>
-								<p class="wow fadeInUp">use our LD & get % for your contribution</p>
+								<p class="wow fadeInUp">Use our LD & get % for your contribution</p>
 							</div>
 						</div>
 					</div>
