--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@
 									<li><a class="n-link-5" href="#">Dao</a></li>
 									<li><a class="n-link-6" href="#">One</a></li>
 									<li><a class="n-link-7" href="#">NFT</a></li>
+									<li><a class="n-link-8" href="#">Chains</a></li>
+									<li><a class="n-link-9 special_nav" href="#">Token</a></li>
+									<li><a class="n-link-10 special_nav" href="#">LM</a></li>
+									<li><a class="n-link-11 special_nav" href="#">LGE</a></li>
+									
 								</ul>
 							</nav>
 							<nav id="nav-right">
@@ -207,8 +212,11 @@
 			<div id="innovation-stack">
 				<div class="container">
 					<div class="row justify-content-center">
-						<div class="col-lg-5 col-md-9">
+						<div class="col-12">
 							<div class="section-subtitle wow fadeInUp text-center">Innovation Stack</div>
+						</div>
+						<div class="col-lg-4 col-md-5">
+							
 
 							<div class="wow fadeInRight">
 								<p class="text-center text-white">In order to make this possible for users, we faced a
@@ -269,8 +277,8 @@
 							<div class="wow fadeInRight">
 								<p class="text-center text-white">Gib BNB. RoverFetch does the rest
 								</p>
-								<p>Fetch</p>
-								<ul class="wow fadeInUp text-white">
+								<p class="text-center">Fetch</p>
+								<ul class="wow fadeInUp text-white fecth_list">
 									<li>Buys Rover tokens
 									</li>
 									<li>Pools in dex</li>
