--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 					</div>
 				</div>
 				<div class="dog-section-single">
-					<div class="row justify-content-center">
+					<div class="row justify-content-center flex-md-row flex-column-reverse">
 						<div class="col-lg-6 col-md-7 my-md-auto mt-5">
 							<div class="dog-section-right">
 								<div class="dog-section-content ">
@@ -380,7 +380,7 @@
 
 				<div class="dog-section-single">
 
-					<div class="row justify-content-center">
+					<div class="row justify-content-center flex-md-row flex-column-reverse">
 
 
 						<div class="col-lg-6 col-md-7 my-md-auto mt-5">
