--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
 			.bg-clouds img {
 				margin-bottom: 60px
 			}
+			.yellow_padding {
+    padding-left: 40px !important;
+}
 		}
 	</style>
 
@@ -170,7 +173,7 @@
 													<div class="banner-main-top">
 														<h1 class="text-white font-lg wow fadeInUp">All DeFi & <br>NFT
 															Earnings</h1>
-														<h2 class="text-white font-lg2 wow fadeInUp"
+														<h2 class="text-white font-lg2 yellow_padding wow fadeInUp"
 															style="padding-left: 50px;">Uni<span>fied</span> in One
 															<span>Coin</span></h2>
 														<h2 class="text-white font-lg2 wow fadeInUp">
