--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
 							<div class="col-md-6 align-self-center text-center text-white wow fadeInUp mt-md-0 mt-5">
 								<h1 class="wow fadeInUp"><span>NFT</span></h1>
 								<h2 class="wow fadeInUp">Bridge Defi to NFT</h2>
-								<h3 class="wow fadeInUp">Trade NFT across marketplaces with full Defi benefits</h3>
+								<h3 class="wow fadeInUp">Trade NFT across marketplaces with <br>  Full Defi benefits</h3>
 								<p>
 									The current explosion of NFTs in the marketplace has created the first real
 									gateway between mainstream everyday people and the heretofore esoteric and
@@ -544,7 +544,7 @@
 								</p>
 							</div>
 							<div class="col-md-6 align-self-center text-center">
-								<img src="images/NFT.jpg" alt="" class=" wow fadeInRight" />
+								<img src="images/NFTs.png" alt="" class="w-50 wow fadeInRight" />
 							</div>
 
 						</div>
