--- a/index.html
+++ b/index.html
@@ -648,6 +648,7 @@
 
 
 				<div id="footer" class="content-banner-box-shadow">
+					
 					<div class="container">
 						<div class="footer-content">
 							<div class="footer-logo-main wow fadeInUp">
@@ -664,6 +665,10 @@
 									<li><a class="n-link-5" href="#">Dao</a></li>
 									<li><a class="n-link-6" href="#">One</a></li>
 									<li><a class="n-link-7" href="#">NFT</a></li>
+									<li><a class="n-link-8" href="#">Chains</a></li>
+									<li><a class="n-link-9" href="#">Token</a></li>
+									<li><a class="n-link-10" href="#">LM</a></li>
+									<li><a class="n-link-11" href="#">LGE</a></li>
 								</ul>
 							</div>
 						</div>
