fast stars no mountains

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 				</div>
 			</div>
 
-			<div id="Fecth">
+			<div id="Fetch">
 				<div class="container">
 					<div class="row justify-content-center">
 						<div class="col-lg-4 col-md-6 col-12">
@@ -256,7 +256,7 @@
 							<div class="wow fadeInRight">
 								<p class="text-center text-white">Gib BNB. RoverFetch does the rest </p>
 								<p class="text-center">Fetch</p>
-								<ul class="wow fadeInUp text-white fecth_list">
+								<ul class="wow fadeInUp text-white Fetch_list">
 									<li>Buys Rover tokens
 									</li>
 									<li>Pools in dex</li>
