--- a/index.html
+++ b/index.html
@@ -245,34 +245,36 @@
 				</div>
 			</div>
 
-			<div id="Fetch">
-				<div class="container">
+
+
+			<div class="dog-section">
+
+				<div id="swap" class="dog-section-single">
 					<div class="row justify-content-center">
-						<div class="col-lg-4 col-md-6 col-12">
-							<div class="section-subtitle wow fadeInUp text-center">Fetch! </div>
-							<div class="wow fadeInLeft">
-								<h2 class="text-center text-white">One Click Easy </h2>
+						<div class="col-md-5 my-auto">
+
+							<div class="dog-section-right">
+								<div class="dog-section-content">
+									<div class="section-subtitle wow fadeInUp">Fetch!</div>
+									<div class="section-title wow fadeInUp">One Click Easy</div>
+									<p class="wow fadeInUp">Send BNB. RoverFetch does the rest<br><br>Fetches you Rover tokens at the best price by splitting the buy from our own RoverSwap and our LGE, to reduce slippage while automatically pooling, staking, and compounding APY for you </p>
+
+									<!-- <a class="button wow fadeInUp" target="_blank" href=" " title="$TRDL ETF">Fetch!
+									</a> -->
+								</div>
 							</div>
-							<div class="wow fadeInRight">
-								<p class="text-center text-white">Gib BNB. RoverFetch does the rest </p>
-								<p class="text-center">Fetch</p>
-								<ul class="wow fadeInUp text-white Fetch_list">
-									<li>Buys Rover tokens
-									</li>
-									<li>Pools in dex</li>
-									<li>Stakes</li>
-									<li>Compounds
-									</li>
-								</ul>
-								<p class="text-center text-white">Fetches you Rover tokens at the best price by splitting the buy from our own RoverSwap and our LGE, to reduce slippage while automatically pooling, staking, and compounding APY for you </p>
+						</div>
+						<div class="col-lg-6 col-md-7 my-md-auto mt-5">
+							<div class="dog-section-left">
+								<div class="dog-section-image wow fadeInLeft">
+									<!-- <img src="images/Swap.png" /> -->
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
 
-
-			<div class="dog-section">
+				
 				<div id="swap" class="dog-section-single">
 					<div class="row justify-content-center">
 						<div class="col-md-4 my-auto">
@@ -296,6 +298,7 @@
 						</div>
 					</div>
 				</div>
+
 				<div class="dog-section-single">
 					<div class="row justify-content-center flex-md-row flex-column-reverse">
 						<div class="col-md-4 my-auto">
@@ -404,7 +407,7 @@
 								<p>ROVER’s vault strategies automate maximum yield using RoverHunt strategies. New hunting strategies are voted into RoverHouse by ROVER token holders, thus incentivizing holding positions and increasing demand for ROVER.</p>
 							</div> 
 							<div class="col-md-6 align-self-center text-center">
-								<img src="images/Compound.png" alt="" class="left-right-image wow fadeInRight" />
+								<img src="images/RoverHouse.png" alt="" class="left-right-image wow fadeInRight" />
 							</div> 
 						</div>
 					</div>
@@ -478,20 +481,18 @@
 					</div>
 				</section>
 
-				<section id="RoverChains"
-					class="content-banner-wrap content-banner-box-shadow content-banner-wrap-theme animate">
-					<div class="container">
+				<section id="RoverChains" class="content-banner-wrap lm-content-banner-wrap content-banner-box-shadow animate animate">
+					<div class="container dog-section-single">
 						<div class="row row-eq-height">
 							<div class="col-md-6 align-self-center text-center">
 								<img src="images/ChainDog.png" alt="" class=" left-right-image w-50 wow fadeInLeft" />
 							</div>
 
-							<div class="col-md-6 align-self-center text-left text-white wow fadeInUp mt-md-0 mt-5">
+							<div class="col-md-6 align-self-center text-left wow fadeInUp mt-md-0 mt-5">
 								<h1 class="wow fadeInUp"><span>RoverChains</span></h1>
 								<h2 class="wow fadeInUp">Cross Chains</h2>
 								<h3 class="wow fadeInUp">L2 DEX & Der Games, Social NFTs</h3>
-								<ul class="wow fadeInUp text-white  text-left">
-									<li>RoverChains</li>
+								<ul class="wow fadeInUp text-left">
 									<li>Cross Chains</li>
 									<li>L2 DEX & Der Games</li>
 									<li>Social NFTs </li>
