--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 								<div class="video-blk">
 									<div class="video-wrapper wow fadeInUp">
 										<video id="video" class="videoPlayer" controls controlsList="nodownload"
-											autoplay loop poster="images/video-poster.jpg">
+											autoplay loop poster="images/RyuStill.jpg">
 											<source src="images/rover-video.mp4" type="video/mp4">
 										</video>
 									</div>
@@ -464,7 +464,7 @@
 						</div>
 					</div>
 				</section>
-				<section id="NFT" class="content-banner-wrap content-banner-box-shadow animate  animate">
+				<section id="NFT" class="content-banner-wrap content-banner-box-shadow animate animate">
 					<div class="container">
 						<div class="row row-eq-height flex-xs-column-reverse">
 							<div class="col-md-6 align-self-center text-left text-white wow fadeInUp mt-md-0 mt-5">
@@ -481,7 +481,7 @@
 					</div>
 				</section>
 
-				<section id="RoverChains" class="content-banner-wrap lm-content-banner-wrap content-banner-box-shadow animate animate">
+				<section id="RoverChains" class="content-banner-wrap lm-content-banner-wrap content-banner-box-shadow animate animate" style="background: rgb(192 222 237);">
 					<div class="container dog-section-single">
 						<div class="row row-eq-height">
 							<div class="col-md-6 align-self-center text-center">
