all dogs from left

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 					<div class="row justify-content-center flex-md-row flex-column-reverse">
 						<div class="col-md-4 my-auto">
 							<div class="dog-section-left">
-								<div class="dog-section-image wow fadeInRight">
+								<div class="dog-section-image wow fadeInLeft">
 									<img src="images/pool.png" />
 								</div>
 							</div>
@@ -355,7 +355,7 @@
 					<div class="row justify-content-center flex-md-row flex-column-reverse"> 
 						<div class="col-md-4 my-auto">
 							<div class="dog-section-left ">
-								<div class="dog-section-image wow fadeInRight">
+								<div class="dog-section-image wow fadeInLeft">
 									<img src="images/Compound.png" />
 								</div>
 							</div>
