--- a/index.html
+++ b/index.html
@@ -190,8 +190,9 @@
 											<div class="banner-header text-center ">
 												<div class="banner-header-title">
 													<div class="banner-main-top">
-														<h1 class="text-white font-lg wow fadeInUp">All DeFi & <br>NFT Earnings</h1>
-														<h2 class="text-white font-lg2 yellow_padding wow fadeInUp" style="padding-left: 50px;">Uni<span>fied</span> in One
+														<h1 class="text-white font-lg wow fadeInUp " data-wow-duration="2s">All DeFi & <br>NFT Earnings</h1>
+													
+														<h2 class="text-white font-lg2 yellow_padding wow fadeInUp" style="padding-left: 50px;" data-wow-duration="2s">Uni<span>fied</span> in One
 															<span>Coin</span></h2>
 														<h2 class="text-white font-lg2 wow fadeInUp">Simpli<span>fied</span> in One <span>Click</span></h2>
 													</div>
