change to water wheel

--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
 
 							</div>
 							<div class="col-md-6 align-self-center text-center ">
-								<img src="images/LGEgif.gif" alt="" class="rovergib-left-right-image wow fadeInRight" >
+								<img src="images/LGEgif-2.gif" alt="" class="rovergib-left-right-image wow fadeInRight" >
 							</div>
 						</div>
 					</div>
